--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/gif" href="/favicon.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Sajal Yadav - Full Stack Developer Portfolio</title>
     <meta name="description" content="Passionate Computer Science student and developer at Bennett University. Explore my projects in web development, Python, and software engineering." />
     <meta name="author" content="Sajal Yadav" />
